--- a/1000.html
+++ b/1000.html
@@ -5,7 +5,7 @@
     <title>您的访问存在异常 - 老兄de博客</title>
     <meta name="description" content="老兄de博客！记录生活随写和自己学习运维的点点滴滴，分享一些你们想要的羊毛干货和免费资源，制作一些你们可能需要的脚本编程，以及许多好玩的实用软件和游戏娱乐，关注我的博客，它会告诉你更多！">
     <meta name="keywords" content="老兄de博客,网站运维,系统运维,网页制作,操作系统,VPS购买,脚本编程,资源分享,免费资源,游戏娱乐,实用软件,生活随写">
-    <link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/icon.jpg">
+    <link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/icon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/style.css">
 	<script src="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/jquery.min.js"></script>			
 </head>
@@ -21,7 +21,7 @@
 	<div style="background:url(https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/2.jpg);" id="hidepic"></div>
 	<div style="background:url(https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/3.jpg);" id="hidepic"></div>
 	<div style="background:url(https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/4.jpg);" id="hidepic"></div>
-  
+
 	<script language="javascript"> 
     var curIndex=0; 
     var timeInterval=9000; 
@@ -37,7 +37,7 @@
     curIndex=0;} 
     else{ 
     curIndex+=1;} 
-    obj.style="background:url(https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/"+arr[curIndex]+")"; 
+    obj.style="background:url(https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/"+arr[curIndex]+")"; 
     } 
     </script> 
 	
@@ -50,7 +50,7 @@
 
 	
 
-    <audio src="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/l89q3-mv785.ogg" autoplay></audio>
+    <audio src="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/l89q3-mv785.ogg" autoplay></audio>
 	<div class="footer">
 	    <div class="other"><lang class="cn"><h2><a href="https://www.2002000.xyz/">回到首页</a></h2></lang><lang class="en"></lang></div></div>
 <div class="last">
@@ -63,7 +63,7 @@
 		<div class="copyright">COPYRIGHT © 1997-2019 | 2002000.xyz</div>
 	</div>
 	
-    <script src="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/main.js"></script>
 	
 
 
