--- a/1000.html
+++ b/1000.html
@@ -6,8 +6,8 @@
     <meta name="description" content="老兄de博客！记录生活随写和自己学习运维的点点滴滴，分享一些你们想要的羊毛干货和免费资源，制作一些你们可能需要的脚本编程，以及许多好玩的实用软件和游戏娱乐，关注我的博客，它会告诉你更多！">
     <meta name="keywords" content="老兄de博客,网站运维,系统运维,网页制作,操作系统,VPS购买,脚本编程,资源分享,免费资源,游戏娱乐,实用软件,生活随写">
     <link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/icon.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/style.css">
-	<script src="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/jquery.min.js"></script>			
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/style.css">
+	<script src="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/jquery.min.js"></script>			
 </head>
 <body id="body" class="loaded">
     <div style="display:none">
@@ -17,10 +17,10 @@
 
     <div class="loadin" style="display: none;"><div class="loadin-ball" style="display: none;"></div></div>
 	
-	<div style="background:url(https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/1.jpg);" id="showpic"></div>
-	<div style="background:url(https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/2.jpg);" id="hidepic"></div>
-	<div style="background:url(https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/3.jpg);" id="hidepic"></div>
-	<div style="background:url(https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.0/anime%20style/static/4.jpg);" id="hidepic"></div>
+	<div style="background:url(https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/1.jpg);" id="showpic"></div>
+	<div style="background:url(https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/2.jpg);" id="hidepic"></div>
+	<div style="background:url(https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/3.jpg);" id="hidepic"></div>
+	<div style="background:url(https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/4.jpg);" id="hidepic"></div>
 
 	<script language="javascript"> 
     var curIndex=0; 
