--- a/anime style/5s.html
+++ b/anime style/5s.html
@@ -1,24 +1,24 @@
-﻿<!-----沧水博客-Github url：https://github.com/CangShui/CloudflareCustomPages ----->
+﻿<!-----老兄de博客-Github url：https://github.com/laoxong/CloudflareCustomPages ----->
 <!doctype html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<title>请等待五秒 - 沧水的博客</title>
-<meta name="description" content="沧水的博客！记录生活随写和自己学习运维的点点滴滴，分享一些你们想要的羊毛干货和免费资源，制作一些你们可能需要的脚本编程，以及许多好玩的实用软件和游戏娱乐，关注我的博客，它会告诉你更多！">
-<meta name="keywords" content="沧水,沧水博客,网站运维,系统运维,网页制作,操作系统,VPS购买,脚本编程,资源分享,免费资源,游戏娱乐,实用软件,生活随写">		
+<title>请等待五秒 - 老兄de博客</title>
+<meta name="description" content="老兄de博客！记录生活随写和自己学习运维的点点滴滴，分享一些你们想要的羊毛干货和免费资源，制作一些你们可能需要的脚本编程，以及许多好玩的实用软件和游戏娱乐，关注我的博客，它会告诉你更多！">
+<meta name="keywords" content="老兄de博客,网站运维,系统运维,网页制作,操作系统,VPS购买,脚本编程,资源分享,免费资源,游戏娱乐,实用软件,生活随写">		
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link href="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.5/anime%20style/static/style_5s.css" rel="stylesheet" type="text/css">
-<script src="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.5/anime%20style/static/jquery_5s.min.js"></script>
+<link href="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/style_5s.css" rel="stylesheet" type="text/css">
+<script src="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/jquery_5s.min.js"></script>
 
 
 </head>
 <body>
-<audio src="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.5/anime%20style/static/vk85-56gh.ogg" autoplay></audio>
+<audio src="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/vk85-56gh.ogg" autoplay></audio>
  <div style="display:none;vertical-align: inherit;">
     ::IM_UNDER_ATTACK_BOX::
 </div>
 <div class="header" id="demo">
-<div class="top_2 name"><a class="name">沧水博客</a></div>
+<div class="top_2 name"><a class="name">老兄de博客</a></div>
   <div class="nav"> <a class="gv name2">正在加载，请耐心等待五秒......</a> </div> 
   <div class="canvaszz"> </div>
   <canvas id="canvas"> </canvas>
