--- a/anime style/1000.html
+++ b/anime style/1000.html
@@ -1,14 +1,14 @@
-<!-----沧水博客-Github url：https://github.com/CangShui/CloudflareCustomPages ----->
+<!-----老兄de博客-Github url：https://github.com/laoxong/CloudflareCustomPages ----->
 <!doctype html>
 <html lang="zh" class=" js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>您的访问存在异常 - 沧水的博客</title>
-    <meta name="description" content="沧水的博客！记录生活随写和自己学习运维的点点滴滴，分享一些你们想要的羊毛干货和免费资源，制作一些你们可能需要的脚本编程，以及许多好玩的实用软件和游戏娱乐，关注我的博客，它会告诉你更多！">
-    <meta name="keywords" content="沧水,沧水博客,网站运维,系统运维,网页制作,操作系统,VPS购买,脚本编程,资源分享,免费资源,游戏娱乐,实用软件,生活随写">
-    <link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.2/anime%20style/static/icon.jpg">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.2/anime%20style/static/style.css">
-	<script src="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.2/anime%20style/static/jquery.min.js"></script>			
+    <title>您的访问存在异常 - 老兄de博客</title>
+    <meta name="description" content="老兄de博客！记录生活随写和自己学习运维的点点滴滴，分享一些你们想要的羊毛干货和免费资源，制作一些你们可能需要的脚本编程，以及许多好玩的实用软件和游戏娱乐，关注我的博客，它会告诉你更多！">
+    <meta name="keywords" content="老兄de博客,网站运维,系统运维,网页制作,操作系统,VPS购买,脚本编程,资源分享,免费资源,游戏娱乐,实用软件,生活随写">
+    <link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/icon.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/style.css">
+	<script src="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/jquery.min.js"></script>			
 </head>
 <body id="body" class="loaded">
     <div style="display:none">
@@ -18,10 +18,10 @@
 
     <div class="loadin" style="display: none;"><div class="loadin-ball" style="display: none;"></div></div>
 	
-	<div style="background:url(https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.2/anime%20style/static/1.jpg);" id="showpic"></div>
-	<div style="background:url(https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.2/anime%20style/static/2.jpg);" id="hidepic"></div>
-	<div style="background:url(https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.2/anime%20style/static/3.jpg);" id="hidepic"></div>
-	<div style="background:url(https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.2/anime%20style/static/4.jpg);" id="hidepic"></div>
+	<div style="background:url(https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/1.jpg);" id="showpic"></div>
+	<div style="background:url(https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/2.jpg);" id="hidepic"></div>
+	<div style="background:url(https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/3.jpg);" id="hidepic"></div>
+	<div style="background:url(https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/4.jpg);" id="hidepic"></div>
   
 	<script language="javascript"> 
     var curIndex=0; 
@@ -38,7 +38,7 @@
     curIndex=0;} 
     else{ 
     curIndex+=1;} 
-    obj.style="background:url(https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.2/anime%20style/static/"+arr[curIndex]+")"; 
+    obj.style="background:url(https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/"+arr[curIndex]+")"; 
     } 
     </script> 
 	
@@ -51,9 +51,9 @@
 
 	
 
-    <audio src="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.2/anime%20style/static/l89q3-mv785.ogg" autoplay></audio>
+    <audio src="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/l89q3-mv785.ogg" autoplay></audio>
 	<div class="footer">
-	    <div class="other"><lang class="cn"><h2><a href="https://www.baidu.com/s?wd=%E6%B2%A7%E6%B0%B4">回到首页</a></h2></lang><lang class="en"></lang></div></div>
+	    <div class="other"><lang class="cn"><h2><a href="https://www.2002000.xyz">回到首页</a></h2></lang><lang class="en"></lang></div></div>
 <div class="last">
 	    <div class="line"></div>
 		<a class="title music cd-headline letters rotate-3 play">
@@ -61,10 +61,10 @@
             <div class="m-tips cd-words-wrapper" style="width: 222px;"><b class="is-visible"><i class="in">B</i><i class="in">e</i><i class="in">l</i><i class="in">i</i><i class="in">e</i><i class="in">v</i><i class="in">e</i><i class="in">M</i><i class="in">e</i><i class="in">·</i><i class="in">G</i><i class="in">a</i><i class="in">t</i><i class="in">e</i><i class="in">O</i><i class="in">f</i><i class="in">S</i><i class="in">t</i><i class="in">e</i><i class="in">i</i><i class="in">n</i><i class="in">e</i><i class="in">r</i></b><b><i class="out">B</i><i class="out">e</i><i class="out">l</i><i class="out">i</i><i class="out">e</i><i class="out">v</i><i class="out">e</i><i class="out">M</i><i class="out">e</i><i class="out">·</i><i class="out">G</i><i class="out">a</i><i class="out">t</i><i class="out">e</i><i class="out">O</i><i class="out">f</i><i class="out">S</i><i class="out">t</i><i class="out">e</i><i class="out">i</i><i class="out">n</i><i class="out">e</i><i class="out">r</i></b></div>
             
         </a>
-		<div class="copyright">COPYRIGHT © 1997-2019 | CangShui.NET</div>
+		<div class="copyright">COPYRIGHT © 1997-2019 | 2002000.xyz</div>
 	</div>
 	
-    <script src="https://cdn.jsdelivr.net/gh/CangShui/CloudflareCustomPages@1.2/anime%20style/static/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/main.js"></script>
 	
 
 
