--- a/anime style/1000.html
+++ b/anime style/1000.html
@@ -42,7 +42,7 @@
     } 
     </script> 
 	
-	<a href="http://cangshui.net/" class="logo"><div class="l-logo"></div><span>C</span><span>A</span><span>N</span><span>G</span><span>S</span><span>H</span><span>U</span><span>I</span><span>.</span><span>N</span><span>E</span><span>T</span></a>
+	<a href="https://www.2002000.xyz" class="logo"><div class="l-logo"></div><span>l</span><span>a</span><span>o</span><span>X</span><span>o</span><span>n</span><span>g</span></a>
 	
 
           <div class="bVIHYL">
