--- a/Simple Black Bottom Style/5s.html
+++ b/Simple Black Bottom Style/5s.html
@@ -28,7 +28,7 @@
 	<div class="divide"></div>
 	<div class="outer"><div class="middle"><div class="inner">
 		<div id="title">
-			<h1><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">老兄</font></font><span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">de博客</font></font></span></h1>
+			<h1><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">老兄</font></font><span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">博客</font></font></span></h1>
 		</div>
 		
 		<div id="gs-content" style="display: block;">
