--- a/anime style/1000.html
+++ b/anime style/1000.html
@@ -42,7 +42,7 @@
     } 
     </script> 
 	
-	<a href="https://www.2002000.xyz" class="logo"><div class="l-logo"></div><span>l</span><span>a</span><span>o</span><span>X</span><span>o</span><span>n</span><span>g</span></a>
+	<a href="https://www.moec.top" class="logo"></div><span>l</span><span>a</span><span>o</span><span>X</span><span>o</span><span>n</span><span>g</span></a>
 	
 
           <div class="bVIHYL">
@@ -53,7 +53,7 @@
 
     <audio src="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/l89q3-mv785.ogg" autoplay></audio>
 	<div class="footer">
-	    <div class="other"><lang class="cn"><h2><a href="https://www.2002000.xyz">回到首页</a></h2></lang><lang class="en"></lang></div></div>
+	    <div class="other"><lang class="cn"><h2><a href="https://www.moec.top">回到首页</a></h2></lang><lang class="en"></lang></div></div>
 <div class="last">
 	    <div class="line"></div>
 		<a class="title music cd-headline letters rotate-3 play">
@@ -61,7 +61,7 @@
             <div class="m-tips cd-words-wrapper" style="width: 222px;"><b class="is-visible"><i class="in">B</i><i class="in">e</i><i class="in">l</i><i class="in">i</i><i class="in">e</i><i class="in">v</i><i class="in">e</i><i class="in">M</i><i class="in">e</i><i class="in">·</i><i class="in">G</i><i class="in">a</i><i class="in">t</i><i class="in">e</i><i class="in">O</i><i class="in">f</i><i class="in">S</i><i class="in">t</i><i class="in">e</i><i class="in">i</i><i class="in">n</i><i class="in">e</i><i class="in">r</i></b><b><i class="out">B</i><i class="out">e</i><i class="out">l</i><i class="out">i</i><i class="out">e</i><i class="out">v</i><i class="out">e</i><i class="out">M</i><i class="out">e</i><i class="out">·</i><i class="out">G</i><i class="out">a</i><i class="out">t</i><i class="out">e</i><i class="out">O</i><i class="out">f</i><i class="out">S</i><i class="out">t</i><i class="out">e</i><i class="out">i</i><i class="out">n</i><i class="out">e</i><i class="out">r</i></b></div>
             
         </a>
-		<div class="copyright">COPYRIGHT © 1997-2019 | 2002000.xyz</div>
+		<div class="copyright">COPYRIGHT © 1997-2019 | moec.top</div>
 	</div>
 	
     <script src="https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0e4efbc/anime%20style/static/main.js"></script>
