--- a/1000.html
+++ b/1000.html
@@ -41,7 +41,7 @@
     } 
     </script> 
 	
-	<a href="https://www.2002000.xyz/" class="logo"><div class="l-logo"></div><span>L</span><span>A</span><span>O</span><span>X</span><span>O</span><span>N</span><span>G</span></a>
+	<a href="https://www.2002000.xyz/" class="logo"></div><span>L</span><span>A</span><span>O</span><span>X</span><span>O</span><span>N</span><span>G</span></a>
 	
 
           <div class="bVIHYL">
