--- a/ACG/5xx.html
+++ b/ACG/5xx.html
@@ -1,6 +1,6 @@
 <!-----老兄de博客-Github url：https://github.com/laoxong/CloudflareCustomPages ----->
 <html lang="en"><head>
-    <title>无法连接到服务器 | INTEL-2333</title>
+    <title>无法连接到服务器 | 老兄</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -667,7 +667,7 @@
                 <div class="text-black text-5xl md:text-15xl font-black">等一下下吖ˋ( ° ▽、° ) </div>
 
                 <p class="text-grey-darker text-2xl md:text-3xl mb-7 leading-normal">
-                    </p><p class="sub-header"><h1>你无法访问cattery.work哦，我们会检查一下什么问题哒！！[应该不会很久叭!]</h1></p>
+                    </p><p class="sub-header"><h1>你无法访问老兄de网站哦，我们会检查一下什么问题哒！！[应该不会很久叭!]</h1></p>
                     <br><br>
                 ::CLOUDFLARE_ERROR_500S_BOX::
 
@@ -676,7 +676,6 @@
                     <ul>
                         <li>Cloudflare事件ID: ::RAY_ID::</li>
                         <li>你的IP: ::CLIENT_IP::</li>
-                        <li>Performance &amp; Security by Cloudflare</li>
                     </ul>
                 </div> 
 
