--- a/ACG/waf_block.html
+++ b/ACG/waf_block.html
@@ -1,6 +1,6 @@
 <!-----老兄de博客-Github url：https://github.com/laoxong/CloudflareCustomPages ----->
 <html lang="en"><head>
-    <title>访问已被拦截 | INTEL-2333</title>
+    <title>访问已被拦截 | 老兄</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -676,7 +676,6 @@
                     <ul>
                         <li>Cloudflare事件ID: ::RAY_ID::</li>
                         <li>你的IP: ::CLIENT_IP::</li>
-                        <li>Performance &amp; Security by Cloudflare</li>
                     </ul>
                 </div> 
 
