--- a/ACG/100X.html
+++ b/ACG/100X.html
@@ -1,6 +1,6 @@
 <!-----老兄de博客-Github url：https://github.com/laoxong/CloudflareCustomPages ----->
 <html lang="en"><head>
-    <title>域名解析错误 | INTEL-2333</title>
+    <title>域名解析错误 | 老兄</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -676,7 +676,6 @@
                     <ul>
                         <li>Cloudflare事件ID: ::RAY_ID::</li>
                         <li>你的IP: ::CLIENT_IP::</li>
-                        <li>Performance &amp; Security by Cloudflare</li>
                     </ul>
                 </div> 
 
@@ -686,6 +685,5 @@
         <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2 right-sec">
         </div>
     </div>
-
 
 </body></html>
