--- a/ACG/under_attack.html
+++ b/ACG/under_attack.html
@@ -1,6 +1,6 @@
 <!-----老兄de博客-Github url：https://github.com/laoxong/CloudflareCustomPages ----->
 <html lang="en"><head>
-    <title>你是机器人咩？ | INTEL-2333</title>
+    <title>你是机器人咩？ | 老兄</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -667,7 +667,7 @@
                 <div class="text-black text-5xl md:text-15xl font-black">等一下下吖ο(=•ω＜=)ρ⌒☆</div>
 
                 <p class="text-grey-darker text-2xl md:text-3xl mb-7 leading-normal">
-                    </p><p class="sub-header"><h1>我们会在5s内检查你的浏览器呐，确保你不是恶意攻击老兄的喔！！[应该不会超过5s叭!]</h1></p>
+                    </p><p class="sub-header"><h1>我们会在5s内检查你的浏览器呐，确保你不是恶意攻击老兄de网站的喔！！[应该不会超过5s叭!]</h1></p>
                     <br><br>
                 ::IM_UNDER_ATTACK_BOX::
 
@@ -676,7 +676,6 @@
                     <ul>
                         <li>Cloudflare事件ID: ::RAY_ID::</li>
                         <li>你的IP: ::CLIENT_IP::</li>
-                        <li>Performance &amp; Security by Cloudflare</li>
                     </ul>
                 </div> 
 
