--- a/ACG/under_attack.html
+++ b/ACG/under_attack.html
@@ -505,7 +505,7 @@
             }
 
             .left-sec{
-                background-image: url('./images/bg-1x-mobile.png')!important;
+                background-image: url('https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0583813/ACG/images/bg-1x-mobile.png')!important;
             }
         }
 
@@ -533,7 +533,7 @@
             }
 
             .left-sec{
-                background-image: url('./images/bg-1x-tablet.png')!important;
+                background-image: url('https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0583813/ACG/images/bg-1x-tablet.png')!important;
             }
         }
 
