--- a/ACG/under_attack.html
+++ b/ACG/under_attack.html
@@ -544,7 +544,7 @@
         }
 
         .left-sec{
-            background-image: url('./images/bg-1x.jpg');
+            background-image: url('https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0583813/ACG/images/bg-1x.jpg');
             background-position: bottom;
             background-size: contain;
             background-repeat: no-repeat;
@@ -654,7 +654,7 @@
     </style>
     <style type="text/css">
 .right-sec{
-    background-image: url('./images/challenge-for-country-1x.jpg');
+    background-image: url('https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0583813/ACG/images/challenge-for-country-1x.jpg');
     background-size: 100% 100%;
 }
 </style>
