臭猫咪的更新-增加图片

--- a/ACG/100X.html
+++ b/ACG/100X.html
@@ -1,6 +1,6 @@
-<!-----老兄de博客-Github url：https://github.com/laoxong/CloudflareCustomPages ----->
+
 <html lang="en"><head>
-    <title>域名解析错误 | 老兄</title>
+    <title>域名解析错误 | INTEL-2333</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -341,7 +341,7 @@
         }
 
         .max-w-sm {
-            max-width: 30rem;
+            max-width: 40rem;
         }
 
         .min-h-screen {
@@ -505,7 +505,7 @@
             }
 
             .left-sec{
-                background-image: url('https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0583813/ACG/images/bg-1x-mobile.png')!important;
+                background-image: url('./images/bg-1x-mobile.png')!important;
             }
         }
 
@@ -533,7 +533,7 @@
             }
 
             .left-sec{
-                background-image: url('https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0583813/ACG/images/bg-1x-tablet.png')!important;
+                background-image: url('./images/bg-1x-tablet.png')!important;
             }
         }
 
@@ -544,7 +544,7 @@
         }
 
         .left-sec{
-            background-image: url('https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0583813/ACG/images/bg-1x.jpg');
+            background-image: url('./images/bg-1x.jpg');
             background-position: bottom;
             background-size: contain;
             background-repeat: no-repeat;
@@ -654,7 +654,7 @@
     </style>
     <style type="text/css">
 .right-sec{
-    background-image: url('https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0583813/ACG/images/challenge-for-country-1x.jpg');
+    background-image: url('https://cdn.jsdelivr.net/gh/xian2333/img/2020/06/07/78468c.png');
     background-size: 100% 100%;
 }
 </style>
@@ -676,6 +676,7 @@
                     <ul>
                         <li>Cloudflare事件ID: ::RAY_ID::</li>
                         <li>你的IP: ::CLIENT_IP::</li>
+                        <li>Performance &amp; Security by Cloudflare</li>
                     </ul>
                 </div> 
 
@@ -685,5 +686,6 @@
         <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2 right-sec">
         </div>
     </div>
+
 
 </body></html>
