--- a/Chinese Page/WAF1000.html
+++ b/Chinese Page/WAF1000.html
@@ -41,14 +41,15 @@
         <div class="cf-columns two">
           <div class="cf-column">
             <h2 data-translate="blocked_why_headline">为什么我被阻止？</h2>
+::CLOUDFLARE_ERROR_1000S_BOX::
 
-            <p data-translate="blocked_why_detail">本网站（黄健周的创客空间）的所有者已禁止您的IP地址/国家/地区，因此您不能访问该网站。</p>
+            <p data-translate="blocked_why_detail">该网站正在使用安全服务来保护自己免受在线攻击。 您刚刚执行的操作触发了安全解决方案。 有多种动作可能触发此阻止，包括提交某个单词或短语，SQL命令或格式错误的数据。</p>
           </div>
 
           <div class="cf-column">
             <h2 data-translate="blocked_resolve_headline">我该怎么解决？</h2>
 
-            <p data-translate="blocked_resolve_detail">您可以通过电子邮件发送网站所有者 (admin@Hjz.ac.cn)，让我们知道您被阻止了。 请提供您在本页显示时的浏览器信息，并在此页底部找到 Cloudflare Ray ID。</p>
+            <p data-translate="blocked_resolve_detail">您可以通过电子邮件发送网站所有者 (admin@Hjz.ac.cn)，让我们知道您被阻止了。 请提供您在本页显示时的操作，并在此页底部找到 Cloudflare Ray ID。</p>
           </div>
         </div>
       </div><!-- /.section -->
