--- a/litespeed/5s.html
+++ b/litespeed/5s.html
@@ -8,6 +8,7 @@
 <body style="color: #444; margin:0;font: normal 14px/20px Arial, Helvetica, sans-serif; height:100%; background-color: #fff;">
 <div style="height:auto; min-height:100%; ">     <div style="text-align: center; width:800px; margin-left: -400px; position:absolute; top: 30%; left:50%;">
         <h1 style="margin:0; font-size:60px; line-height:150px; font-weight:bold;">请耐心等待5秒</h1>
+        ::IM_UNDER_ATTACK_BOX::
         <li>Cloudflare事件ID: ::RAY_ID::</li> <li>你的IP: ::CLIENT_IP::</li>
 </h2>
 <p>应该不会超过5s叭(应该</p>
