--- a/Chinese Page/V2/5XX.html
+++ b/Chinese Page/V2/5XX.html
@@ -76,7 +76,7 @@
             <div class="cf-columns two">
                 <div class="cf-column">
                     <h2 data-translate="what_happened">发生了什么？</h2>
-                    <p data-translate="connection_timed_out">Cloudflare的网络与原始Web服务器之间的初始连接超时。 因此，该网页无法显示。</p>
+                    <p data-translate="connection_timed_out">Cloudflare的网络与原始Web服务器之间的初始连接异常。 因此，该网页无法显示。</p>
                 </div>
               
                 <div class="cf-column">
