--- a/ACG/100X.html
+++ b/ACG/100X.html
@@ -1,6 +1,6 @@
 
 <html lang="en"><head>
-    <title>域名解析错误 | INTEL-2333</title>
+    <title>10xx错误 | INTEL-2333</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -668,6 +668,7 @@
 
                 <p class="text-grey-darker text-2xl md:text-3xl mb-7 leading-normal">
                     </p><p class="sub-header"><h1>Oops!!好像又翻车惹，我们会尽快恢复的啦！[应该不会很久叭!]</h1></p>
+                    </p><p class="sub-header"><h1>也可能是您的访问被拦截了喵！</h1></p>
                     <br><br>
                 ::CLOUDFLARE_ERROR_1000S_BOX::
 
